# bookbot-navigation

./: README.md
bookbot_base_simulator/: CMakeLists.txt  package.xml
bookbot_base_simulator/include/bookbot_base_simulator/: bookbot_base_simulator.h  robot_motion_model.h
bookbot_base_simulator/src/: bookbot_base_simulator.cpp  bookbot_base_simulator_node.cpp  robot_motion_model.cpp
path_converter/: CMakeLists.txt  package.xml
path_converter/src/: path_converter_node.cpp
planning_msgs/: CMakeLists.txt  package.xml
planning_msgs/msg/: Path.msg  PathPoint.msg  Trajectory.msg  TrajectoryPoint.msg  WaypointList.msg
primitive_planner/: CMakeLists.txt  package.xml
primitive_planner/include/primitive_planner/: primitive.h  primitive_planner.h  primitive_planner_introspection.h  primitive_search_node.h  visited_grid.h
primitive_planner/launch/: primitive_planner.launch  test_primitive_planner.launch
primitive_planner/param/: primitive_planner_params.yaml
primitive_planner/src/: primitive.cc  primitive_planner.cc  primitive_planner_introspection.cc  primitive_planner_node.cc  primitive_search_node.cc  visited_grid.cc
primitive_velocity_planner/: CMakeLists.txt  package.xml
primitive_velocity_planner/include/primitive_velocity_planner/: primitive_velocity_planner.h  velocity_planner_types.h  velocity_profile_search.h
primitive_velocity_planner/include/velocity_planner/: primitive_velocity_planner.h  velocity_planner_introspection.h  velocity_planner_types.h  velocity_profile_search.h  velocity_search_visited_grid.h
primitive_velocity_planner/launch/: primitive_velocity_planner.launch  test_primitive_velocity_planner.launch
primitive_velocity_planner/param/: primitive_velocity_planner_params.yaml
primitive_velocity_planner/rviz/: planner.rviz
primitive_velocity_planner/scripts/: fake_occupancy_grid.sh
primitive_velocity_planner/src/: primitive_velocity_planner.cc  primitive_velocity_planner_node.cc  velocity_planner_introspection.cc  velocity_profile_search.cc  velocity_search_visited_grid.cc
ros_utilities/: CMakeLists.txt  package.xml
ros_utilities/include/ros_utilities/: introspection.h  parameter_loading.h  scoped_timer.h  topic_listener.h
ros_utilities/src/: introspection.cpp  scoped_timer.cpp
ros_utilities/test/: topic_listener_test.cpp  topic_listener_test.launch
signed_distance_field/: CMakeLists.txt  package.xml
signed_distance_field/include/signed_distance_field/: signed_distance_field.h  signed_distance_field_introspection.h
signed_distance_field/src/: signed_distance_field.cc  signed_distance_field_introspection.cc
signed_distance_field/test/: signed_distance_field_generation_test.cc  signed_distance_field_test.cc
trajectory_following_controller/: CMakeLists.txt  package.xml
trajectory_following_controller/include/trajectory_following_controller/: trajectory_following_controller.h  trajectory_following_controller_introspection.h
trajectory_following_controller/src/: trajectory_following_controller.cc  trajectory_following_controller_introspection.cc  trajectory_following_controller_node.cc
trajectory_math/: CMakeLists.txt  package.xml
trajectory_math/include/trajectory_math/: cubic_hermite_interpolation.h  cubic_spiral.h  curve_algorithms.h  float_comparison.h  gauss_legendre_integration.h  path.h  path_algorithms.h  point_algorithms.h  trajectory.h  trajectory1D.h  trajectory1D_algorithms.h  trajectory_algorithms.h
trajectory_math/src/: cubic_hermite_interpolation.cc  cubic_spiral.cc  curve_algorithms.cc  gauss_legendre_integration.cc  path_algorithms.cc  point_algorithms.cc  trajectory1D_algorithms.cc  trajectory_algorithms.cc
trajectory_math/test/: cubic_hermite_test.cc  cubic_spiral_test.cc  curve_algorithms_test.cc  gauss_legendre_test.cc  path_algorithms_test.cc  point_algorithms_test.cc
waypoint_backend/: CMakeLists.txt  package.xml
waypoint_backend/include/waypoint_backend/: waypoint_backend.h
waypoint_backend/src/: waypoint_backend.cc  waypoint_backend_node.cc
waypoint_ui/: CMakeLists.txt  package.xml  plugin_description.xml
waypoint_ui/src/: waypoint_tool.cc  waypoint_tool.h
