<?xml version="1.0"?>
<package format="2">
  <name>bookbot_base_simulator</name>
  <version>0.0.0</version>
  <description>The bookbot_base_simulator package</description>

  <maintainer email="jshardy@google.com">Jason Hardy</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <depend>abseil_cpp</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>

  <export>
  </export>
</package>
