<?xml version="1.0"?>
<package format="2">
  <name>path_converter</name>
  <version>0.0.0</version>
  <description>The path_converter package</description>

  <maintainer email="jshardy@google.com">Jason Hardy</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>
  <depend>nav_msgs</depend>
  <depend>planning_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>trajectory_math</depend>

  <export>
  </export>
</package>
