<?xml version="1.0"?>
<package format="2">
  <name>planning_msgs</name>
  <version>0.0.0</version>
  <description>The planning_msgs package</description>
  <maintainer email="jshardy@google.com">Jason Hardy</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>
