<?xml version="1.0"?>
<package format="2">
  <name>primitive_velocity_planner</name>
  <version>0.0.0</version>
  <description>The primitive_velocity_planner package</description>

  <maintainer email="jshardy@google.com">Jason Hardy</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>planning_msgs</depend>
  <depend>ros_utilities</depend>
  <depend>roscpp</depend>
  <depend>signed_distance_field</depend>
  <depend>tf</depend>
  <depend>trajectory_math</depend>
  <depend>visualization_msgs</depend>

  <export>
  </export>
</package>
