<?xml version="1.0"?>
<package format="2">
  <name>signed_distance_field</name>
  <version>0.0.0</version>
  <description>The signed_distance_field package</description>

  <maintainer email="jshardy@google.com">Jason Hardy</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>
  <depend>abseil_cpp</depend>
  <depend>libopencv-dev</depend>
  <depend>nav_msgs</depend>
  <depend>planning_msgs</depend>
  <depend>roscpp</depend>
  <depend>ros_utilities</depend>
  <depend>tf</depend>
  <depend>trajectory_math</depend>

  <export>
  </export>
</package>
