<?xml version="1.0"?>
<package format="2">
  <name>waypoint_backend</name>
  <version>0.0.0</version>
  <description>The waypoint_backend package</description>

  <maintainer email="jshardy@google.com">jshardy</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>planning_msgs</depend>
  <depend>roscpp</depend>
  <depend>ros_utilities</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
